--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -206,7 +206,7 @@ body {
   width: 12px;
   height: 13px;
   font-size: 1px;
-  background: url('/images/chosen-sprite.png') right top no-repeat; }
+  background: url('/fbinterest-static/images/chosen-sprite.png') right top no-repeat; }
 
 .chzn-container-single .chzn-single abbr:hover {
   background-position: right -11px; }
@@ -235,7 +235,7 @@ body {
   width: 18px; }
 
 .chzn-container-single .chzn-single div b {
-  background: url('/images/chosen-sprite.png') no-repeat 0 1px;
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat 0 1px;
   display: block;
   width: 100%;
   height: 100%; }
@@ -248,13 +248,13 @@ body {
   z-index: 1010; }
 
 .chzn-container-single .chzn-search input {
-  background: white url('/images/chosen-sprite.png') no-repeat 100% -22px;
-  background: url('/images/chosen-sprite.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
-  background: url('/images/chosen-sprite.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-  background: url('/images/chosen-sprite.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-  background: url('/images/chosen-sprite.png') no-repeat 100% -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
-  background: url('/images/chosen-sprite.png') no-repeat 100% -22px, -ms-linear-gradient(top, white 85%, #eeeeee 99%);
-  background: url('/images/chosen-sprite.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+  background: white url('/fbinterest-static/images/chosen-sprite.png') no-repeat 100% -22px;
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat 100% -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat 100% -22px, -ms-linear-gradient(top, white 85%, #eeeeee 99%);
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
   margin: 1px 0;
   padding: 4px 20px 4px 5px;
   outline: 0;
@@ -354,7 +354,7 @@ body {
   width: 12px;
   height: 13px;
   font-size: 1px;
-  background: url('/images/chosen-sprite.png') right top no-repeat; }
+  background: url('/fbinterest-static/images/chosen-sprite.png') right top no-repeat; }
 
 .chzn-container-multi .chzn-choices .search-choice .search-choice-close:hover {
   background-position: right -11px; }
@@ -520,13 +520,13 @@ body {
   border-right: none; }
 
 .chzn-rtl .chzn-search input {
-  background: url('/images/chosen-sprite.png') no-repeat -38px -22px, white;
-  background: url('/images/chosen-sprite.png') no-repeat -38px -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
-  background: url('/images/chosen-sprite.png') no-repeat -38px -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-  background: url('/images/chosen-sprite.png') no-repeat -38px -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-  background: url('/images/chosen-sprite.png') no-repeat -38px -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
-  background: url('/images/chosen-sprite.png') no-repeat -38px -22px, -ms-linear-gradient(top, white 85%, #eeeeee 99%);
-  background: url('/images/chosen-sprite.png') no-repeat -38px -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat -38px -22px, white;
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat -38px -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat -38px -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat -38px -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat -38px -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat -38px -22px, -ms-linear-gradient(top, white 85%, #eeeeee 99%);
+  background: url('/fbinterest-static/images/chosen-sprite.png') no-repeat -38px -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
   padding: 4px 5px 4px 20px; }
 
 /* @end */
