--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,9 +4,9 @@
 - content_for :header do
   .logo
     .wrapper
-      %h1= image_tag( lorem.image("200x50", :text => "Pinterest"), :alt => "" )
+      %h1= image_tag( "https://placehold.co/200x50?text=FBinterest", :alt => "" )
       .search
-        = image_tag( lorem.image("200x50", :text => "Search box"), :alt => "" )
+        = image_tag( "https://placehold.co/200x50?text=Search%20Box", :alt => "" )
       .right
         %ul
           %li About
@@ -29,14 +29,14 @@
   - 100.times do
     .item
       - @imgheight = ( rand(10) * 20 + 100 ).to_s
-      = image_tag( lorem.image( "192x" + @imgheight ), :alt => "", :height => @imgheight )
+      = image_tag( "https://placehold.co/192x" + @imgheight , alt: "", height: @imgheight )
       %h2= lorem.sentence
       .comments
         = 1 + rand(10)
         comments
       .chat
         .chatbox
-          = image_tag( lorem.image("30x30"), :alt => "" )
+          = image_tag( "https://placehold.co/30x30", alt: "" )
           %b= lorem.name
           via
           %b= lorem.name
@@ -45,6 +45,6 @@
         - @chat = rand(3)
         - @chat.times do
           .chatbox
-            = image_tag( lorem.image("30x30"), :alt => "" )
+            = image_tag( "https://placehold.co/30x30", alt: "" )
             %b= lorem.name
             %p= lorem.sentence
