--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -1,16 +1,17 @@
 @charset "utf-8";
-@import "style.css.scss";
-@import "chosen.css.scss";
+@import 'reset.scss';
+@import 'style.scss';
+@import 'chosen.css.scss';
 
 div#loading {
-    text-align: center;
-    color: white;
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 100px;
-    font-size: 16px;
-    height: 1.5em;
-    line-height: 1.5em;
-    z-index: 99999;
+  text-align: center;
+  color: white;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100px;
+  font-size: 16px;
+  height: 1.5em;
+  line-height: 1.5em;
+  z-index: 99999;
 }
