--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -1,12 +1,9 @@
-@import "compass";
-@include global-reset;
-
 $bg: #faf7f7;
 $color: #8c7e7e;
 
 body {
-  background: $bg - #050505;
-  font-family: "helvetica neue", sans-serif;
+  background: $bg;
+  font-family: 'helvetica neue', sans-serif;
   font-size: 13px;
   color: #444;
   padding-top: 150px;
@@ -29,16 +26,18 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  @include box-shadow(0 0 5px rgba(#000,.7));
+  box-shadow: 0 0 5px rgba(#000, 0.7);
+
   .logo {
     padding: 7px 0;
-    border-bottom: 1px solid rgba(#000,.2);
+    border-bottom: 1px solid rgba(#000, 0.2);
     h1 {
       width: 200px;
       height: 50px;
       margin: 0 auto;
     }
     .search {
+      display: none;
       float: left;
       position: absolute;
       top: 0;
@@ -56,7 +55,7 @@ body {
           float: left;
           padding: 15px 27px 0 14px;
         }
-      }  
+      }
     }
   }
   nav {
@@ -69,27 +68,25 @@ body {
         display: inline;
         margin: 0 2px;
         &:after {
-          content: "·";
+          content: '·';
           padding-left: 7px;
-          color: rgba(#000,.3);
+          color: rgba(#000, 0.3);
         }
       }
     }
   }
 }
 #container {
-  width: 948px;
-  position: relative;
-  margin: 0 auto;
+  column-count: 4;
 }
 .item {
+  display: inline-block;
   width: 192px;
-  float: left;
   padding: 15px 15px 0;
   margin: 0 7px 15px;
   font-size: 12px;
   background: white;
-  @include box-shadow( 0 1px 3px rgba(34,25,25,0.4) );
+  box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
   line-height: 1.5;
   .comments {
     color: $color;
@@ -101,10 +98,10 @@ body {
   }
   .chatbox {
     border-top: 1px solid white;
-    border-bottom: 1px solid rgba(#000,.1);
+    border-bottom: 1px solid rgba(#000, 0.1);
     padding: 15px 15px;
     padding-left: 50px;
-    @include pie-clearfix;
+
     &:last-child {
       border-bottom: none;
     }
@@ -115,8 +112,9 @@ body {
       }
     }
     img {
-      margin-left: -35px;
-      float: left;
+      display: block;
+      width: 100%;
+      max-width: 100%;
     }
     b {
       font-weight: bold;
