--- a/source/assets/stylesheets/base/_site.scss
+++ b/source/assets/stylesheets/base/_site.scss
@@ -1,17 +1,121 @@
+$bg: #faf7f7;
+$color: #8c7e7e;
+
 body {
-  background-color: $yellow;
-  color: $black;
-  font-family: $font-family-base;
-  padding: 18vh 1rem;
-  text-align: center;
+  background: $bg;
+  font-family: 'helvetica neue', sans-serif;
+  font-size: 13px;
+  color: #444;
+  padding-top: 150px;
 }
-a {
-  color: rgba(#000, 0.7);
-  &:focus,
-  &:hover {
-    color: rgba(#000, 0.6);
+
+.text-shadow {
+  text-shadow: 0 1px 0 white;
+}
+
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+  position: relative;
+}
+
+#hd {
+  background: $bg;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  box-shadow: 0 0 5px rgba(#000, 0.7);
+
+  .logo {
+    padding: 7px 0;
+    border-bottom: 1px solid rgba(#000, 0.2);
+    h1 {
+      width: 200px;
+      height: 50px;
+      margin: 0 auto;
+    }
+    .search {
+      display: none;
+      float: left;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    .right {
+      float: right;
+      position: absolute;
+      top: 0;
+      right: 0;
+      ul {
+        font-weight: bold;
+        @extend .text-shadow;
+        li {
+          float: left;
+          padding: 15px 27px 0 14px;
+        }
+      }
+    }
+  }
+  nav {
+    border-top: 1px solid white;
+    @extend .text-shadow;
+    padding: 10px 0;
+    ul {
+      text-align: center;
+      li.nav-item {
+        display: inline;
+        margin: 0 2px;
+        &:after {
+          content: '·';
+          padding-left: 7px;
+          color: rgba(#000, 0.3);
+        }
+      }
+    }
   }
 }
-.middleman-logo {
-  width: 12rem;
+#container {
+  column-count: 4;
+}
+.item {
+  display: inline-block;
+  padding: 15px 15px 0;
+  margin: 0 7px 15px;
+  font-size: 12px;
+  background: white;
+  box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
+  line-height: 1.5;
+  .comments {
+    color: $color;
+    padding-bottom: 15px;
+  }
+  .chat {
+    background: #f2f0f0;
+    margin: 0 -15px;
+  }
+  .chatbox {
+    border-top: 1px solid white;
+    border-bottom: 1px solid rgba(#000, 0.1);
+    padding: 15px 15px;
+    padding-left: 50px;
+
+    &:last-child {
+      border-bottom: none;
+    }
+    &:first-child {
+      color: #b29c9c;
+      b {
+        color: #8c7e7e;
+      }
+    }
+    img {
+      margin-left: -35px;
+      float: left;
+    }
+    b {
+      font-weight: bold;
+    }
+  }
 }
