--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:charset => "utf-8"}
-    = stylesheet_link_tag 'main'
+    = stylesheet_link_tag 'all'
     = yield_content :head
   %body{:class => page_classes}
     #loading{:style => "display:none; background-color: red;"}
